# firstProjectFastAPI

firstProjectFastAPi/: README.md  converter.py  main.py  pyproject.toml  routers.py  schemas.py
