[tool.poetry]
name = "firstprojectfastapi"
version = "0.1.0"
description = ""
authors = ["Álvaro Antônio <alvaroantoniosbu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
